configured webpack and polyfills to support webcomponents

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
+    "target": "es2015",
     "allowJs": true
   },
   "include": [
