--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@webpack-cli/init": "^1.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
@@ -27,7 +28,6 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
-    "@webcomponents/custom-elements": "^1.4.3",
     "@webcomponents/webcomponentsjs": "^2.5.0",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0"
