removed unused plugins and packages, fixed ts imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
+    "moduleResolution": "node",
     "target": "es2015",
     "allowJs": true
   },
