--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "firebase": "^8.2.1",
     "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0"
+    "lit-html": "^1.3.0",
+    "rambda": "^6.4.0"
   }
 }
