--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-cli serve"
+    "start": "webpack-cli serve",
+    "deploy": "webpack && firebase deploy"
   },
   "author": "Nameless",
   "license": "ISC",
