--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
+    "@material/mwc-button": "^0.20.0",
+    "@material/mwc-fab": "^0.20.0",
+    "@material/mwc-slider": "^0.20.0",
+    "@material/mwc-textfield": "^0.20.0",
     "firebase": "^8.2.1",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
