--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material/mwc-fab": "^0.20.0",
     "@material/mwc-slider": "^0.20.0",
     "@material/mwc-textfield": "^0.20.0",
+    "axios": "^0.21.1",
     "firebase": "^8.2.1",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
